# seguimiento_candidatos_rh

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  helpers.py  main.py  pyproject.toml  supabase_helper.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: bada4791287e_se_agrego_otp_a_suer.py
db/: crud.py  models.py
routers/: auth.py  candidato.py  dashboard.py  empresa.py  entrevista.py  otp.py  papeleria.py  postulaciones.py  puesto.py  user.py
templates/: candidato.html  candidatos.html  dashboard.html  empresa.html  entrevista.html  home.html  login.html  perfil.html  postulaciones.html  puesto.html  usuarios.html
templates/partials/: empresa_edit_row.html  empresa_list.html  empresa_row.html  puesto_edit_row.html  puesto_list.html  puesto_row.html
templates/partials/auth/: otp_challenge.html
templates/partials/candidato/: candidato_edit_row.html  candidato_list.html  candidato_row.html
templates/partials/empresa/: empresa_edit_row.html  empresa_list.html  empresa_row.html
templates/partials/entrevista/: entrevista_edit_row.html  entrevista_list.html  entrevista_modal.html  entrevista_row.html
templates/partials/otp/: otp_section.html  otp_verify.html
templates/partials/papeleria/: papeleria_edit_row.html  papeleria_list.html  papeleria_row.html
templates/partials/postulaciones/: postulacion_edit_row.html  postulacion_list.html  postulacion_row.html
templates/partials/puesto/: puesto_edit_row.html  puesto_list.html  puesto_row.html
templates/partials/usuarios/: usuario_edit_row.html  (+3 more)
