[project]
name = "candidatosrh"
version = "0.1.0"
description = "Gestor de Candidatos RH"
authors = [
  {name = "Brian Adrian Dorantes Salazar", email = "briandorantes@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.38",
    "python-dotenv>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "supabase>=2.31.0",
    "pytest>=9.1.1",
    "alembic>=1.18.4",
    "fastapi-csrf-protect>=1.0.7",
    "slowapi>=0.1.10",
]
